--- a/fly-web/src/main/resources/static/html/jie/add.html
+++ b/fly-web/src/main/resources/static/html/jie/add.html
@@ -118,6 +118,18 @@
                     </select>
                   </div>
                 </div>
+                <div class="layui-col-md3">
+                  <label class="layui-form-label" for="L_version">版本号</label>
+                  <div class="layui-input-block">
+                    <input type="text" id="L_version" value="" name="version" autocomplete="off" class="layui-input">
+                  </div>
+                </div>
+                <div class="layui-col-md6">
+                  <label class="layui-form-label" for="L_browser">浏览器</label>
+                  <div class="layui-input-block">
+                    <input type="text" id="L_browser"  value="" name="browser" placeholder="浏览器名称及版本，如：IE 11" autocomplete="off" class="layui-input">
+                  </div>
+                </div>
               </div>
               <div class="layui-form-item layui-form-text">
                 <div class="layui-input-block">
